--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/EditorTemplates/SQLTables.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/EditorTemplates/SQLTables.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<WinMacOs.Models.Manager.SQLCompare.SQLTableModel>
 
-<div class="scroll" style="position: relative; max-height:314px;">
+<div class="" style="position: relative;">
     <table class="datatable">
         <thead class="frezze-header border-bt-violet-0">
             <tr>
