--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/Shared/_Layout.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @Scripts.Render("~/bundles/common")
     @RenderSection("Scripts", required: false)
 </head>
-<body class="no-padding">
+<body class="no-padding dark-0">
     <div class="container-fluid">
         @RenderBody()
         @RenderSection("SPAViews", required: false)
