--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -300,7 +300,8 @@
         }
 
     .bg-fa-wand-magic-sparkles {
-        background-image: url( "data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%2216%22%20width%3D%2218%22%20viewBox%3D%220%200%20576%20512%22%3E%3C!--!Font%20Awesome%20Free%206.5.1%20by%20%40fontawesome%20-%20https%3A%2F%2Ffontawesome.com%20License%20-%20https%3A%2F%2Ffontawesome.com%2Flicense%2Ffree%20Copyright%202024%20Fonticons%2C%20Inc.--%3E%3Cpath%20stroke%3D%22white%22%20fill%3D%22white%22%20d%3D%22M234.7%2042.7L197%2056.8c-3%201.1-5%204-5%207.2s2%206.1%205%207.2l37.7%2014.1L248.8%20123c1.1%203%204%205%207.2%205s6.1-2%207.2-5l14.1-37.7L315%2071.2c3-1.1%205-4%205-7.2s-2-6.1-5-7.2L277.3%2042.7%20263.2%205c-1.1-3-4-5-7.2-5s-6.1%202-7.2%205L234.7%2042.7zM46.1%20395.4c-18.7%2018.7-18.7%2049.1%200%2067.9l34.6%2034.6c18.7%2018.7%2049.1%2018.7%2067.9%200L529.9%20116.5c18.7-18.7%2018.7-49.1%200-67.9L495.3%2014.1c-18.7-18.7-49.1-18.7-67.9%200L46.1%20395.4zM484.6%2082.6l-105%20105-23.3-23.3%20105-105%2023.3%2023.3zM7.5%20117.2C3%20118.9%200%20123.2%200%20128s3%209.1%207.5%2010.8L64%20160l21.2%2056.5c1.7%204.5%206%207.5%2010.8%207.5s9.1-3%2010.8-7.5L128%20160l56.5-21.2c4.5-1.7%207.5-6%207.5-10.8s-3-9.1-7.5-10.8L128%2096%20106.8%2039.5C105.1%2035%20100.8%2032%2096%2032s-9.1%203-10.8%207.5L64%2096%207.5%20117.2zm352%20256c-4.5%201.7-7.5%206-7.5%2010.8s3%209.1%207.5%2010.8L416%20416l21.2%2056.5c1.7%204.5%206%207.5%2010.8%207.5s9.1-3%2010.8-7.5L480%20416l56.5-21.2c4.5-1.7%207.5-6%207.5-10.8s-3-9.1-7.5-10.8L480%20352l-21.2-56.5c-1.7-4.5-6-7.5-10.8-7.5s-9.1%203-10.8%207.5L416%20352l-56.5%2021.2z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E" );*/
+        background-image: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20height%3D%2216%22%20width%3D%2210%22%20viewBox%3D%220%200%20160%20256%22%3E%3Cpath%20stroke%3D%22white%22%20fill%3D%22white%22%20d%3D%22M60%2060%2060%2080%2080%2080%2080%2060z%22%3E%3C%2Fpath%3E%3Cpath%20stroke%3D%22white%22%20fill%3D%22white%22%20d%3D%22M140%20140%20140%20160%20160%20160%20160%20140z%22%3E%3C%2Fpath%3E%3Cpath%20stroke%3D%22white%22%20fill%3D%22white%22%20d%3D%22M60%20220%2060%20240%2080%20240%2080%20220z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E);
+        /*background-position: bottom;*/
         background-repeat: repeat-x;
     }
 
@@ -314,6 +315,27 @@
             font-size: 2rem;
             margin: 0;
         }
+
+    i.fa-solid.fa-expand:hover, i.fa-solid.fa-compress:hover {
+        /*font-size: 3rem;*/
+        -webkit-transition: anim1 .3s /*xcubic-bezier(0,0,.2,1)*/;
+        animation: anim1 .3s /*cubic-bezier(0, 0, 0.2, 1)*/;
+    }
+
+    @@keyframes anim1 {
+        0% {
+            transform: scale(1.0);
+        }
+
+        50% {
+            transform: scale(1.2);
+        }
+
+        100% {
+            transform: scale(1.0);
+        }
+    }
+
 
     button.maximize, button.exit-full {
         padding: 0;
