--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -226,10 +226,18 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-md-3">
+                                <div>Objects selected for deployment</div>
+                                <div data-bind="data.objectsSelected"></div>
+                            </div>
                             <div class="col-md-4">
+                                <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dependencies</div>
+                            </div>
+                            <div class="col-md-5">
+                                <div>Referencing or referenced by</div>
                             </div>
                         </div>
-
+                        
                     </div>
             </div>
         </section>
