--- a/Windows-MacOs/Windows-MacOs/Views/Viewer/_Viewer.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Viewer/_Viewer.cshtml
@@ -3,8 +3,9 @@
 }
 
 <div name="content" class="content col-flex">
-    <div class="wrapped border-1 scroll-y" style="flex-basis: 40px;">
+    <div class="wrapped border-1" style="flex-basis: 40px;">
         <div class="row">
+            <a class="btn btn2 small" href="javascript:void(0)" id="btnSave"><i class="fa-solid fa-floppy-disk"></i></a>
         </div>
     </div>
     <div class="resizer-y" id="btnResizer"></div>
