--- a/Windows-MacOs/Windows-MacOs/Views/Viewer/EditorTemplates/ViewFile.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Viewer/EditorTemplates/ViewFile.cshtml
@@ -1,11 +1,20 @@
 ﻿@{
-    @model ContentResult
+    @model WinMacOs.Models.Viewer.MimeContentResultModel
     ViewBag.Title = "ViewFile";
 }
 
 <div class="sql-data text-prewrap">@Html.DisplayFor(model => model.Content)</div>
+<div>
+    @Html.HiddenFor(model => model.FileName)
+    @Html.HiddenFor(model => model.ContentType)
+</div>
 <script>
+    $(document).ready(function () {
+        $("#btnSave").click(function () {
+            TorihikiUtils.saveFileDownload($("#viewdata").text(), $("#FileName").val(), $("#ContentType").val())
+        });
 
+    });
 </script>
 <style>
 </style>
