--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -225,20 +225,29 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" id="">
                             <div class="col-md-2">
                                 <div>Objects selected for deployment</div>
-                                <div data-bind="data.objectsSelected"></div>
                             </div>
                             <div class="col-md-5">
                                 <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dependencies</div>
-                                @Html.EditorFor(model => model.SQLDependencies)
                             </div>
                             <div class="col-md-5">
                                 <div>Referencing or referenced by</div>
                             </div>
                         </div>
-                        
+                        <div class="row" id="rowSQLDependencies">
+                            <div class="col-md-2">
+                                <div data-bind="data.objectsSelected"></div>
+                            </div>
+                            <div class="col-md-5">
+                                <div id="SQLDependencies">
+                                    @*load by js*@
+                                </div>
+                            </div>
+                            <div class="col-md-5">
+                            </div>
+                        </div>
                     </div>
             </div>
         </section>
@@ -259,6 +268,7 @@
 </div>
 <script>
     var getSQLScript = '@Url.Action("GetSQLScript", "manager/SQLCompare")'
+    var getSQLDependencies = '@Url.Action("GetSQLDependencies", "manager/SQLCompare")'
 </script>
 <style>
 </style>
