--- a/Windows-MacOs/Windows-MacOs/Content/Pages/Viewer/viewer.css
+++ b/Windows-MacOs/Windows-MacOs/Content/Pages/Viewer/viewer.css
@@ -46,6 +46,11 @@
 }
 
 /*css*/
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     font-size: .8rem;
 }
@@ -53,6 +58,7 @@ body {
 .top-bar {
     font-size: 1rem;
 }
+
 .dark-0 {
     background-color: var(--black-2);
 }
@@ -282,6 +288,10 @@ button.maximize, button.exit-full {
     font-size: 1.4rem;
 }
 
+#toolbarContainer {
+    height: 32px;
+}
+
 .tcc-btn-cyan {
     background: var(--blue-1);
     color: #FFF;
@@ -383,15 +393,19 @@ button.maximize, button.exit-full {
     border: 1px solid #413e3e3d;
     padding: 0 4px;
 }
+
 .dep-input-grwap .flex > div:first-child {
     flex-basis: 100px;
 }
+
 .dep-input-grwap {
     margin-top: 4px;
 }
+
 .details {
     margin-left: 4px;
 }
+
 .dep-footer {
     background-color: var(--grey-2);
     height: 34px;
@@ -399,13 +413,30 @@ button.maximize, button.exit-full {
 }
 
 .btn.small {
-    margin: 1px;
+    margin: 2px 2px;
     height: 30px;
     letter-spacing: normal;
     line-height: 28px;
     border-radius: 1px;
     padding: 0 2px;
     font-size: .8rem;
+}
+
+.btn.tiny {
+    margin: 2px 1px;
+    min-width: 16px;
+    height: 22px;
+    letter-spacing: normal;
+    line-height: 18px;
+    border-radius: 2px;
+    padding: 2px 6px 0;
+    font-size: .6rem;
+    box-shadow: none;
+}
+
+.toolbarButton {
+    width: 28px;
+    height: 28px;
 }
 
 .btn1 {
@@ -416,10 +447,15 @@ button.maximize, button.exit-full {
     background: var(--grey-2);
 }
 
+    .btn2.bg-transparent:hover {
+        background: var(--grey-2) !important;
+    }
+
 .dep-right {
     display: none;
     font-size: .7rem;
 }
+
     .dep-right.active {
         display: initial;
     }
@@ -429,6 +465,7 @@ button.maximize, button.exit-full {
         width: 100%;
     }
 }
+
 @media screen and (max-width: 768px) {
     .scroll-y {
         overflow-x: scroll;
