--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -220,16 +220,16 @@
                         <div class="row">
                             <div class="col-md-12 center">
                                 <div>
-                                    <input type="checkbox" id="dep-depen-chk1" value="1" />
+                                    <input type="checkbox" id="chkdepAllDependencies" value="1" data-bind="data.depAllDependencies" />
                                     Deploy all dependencies (recommended)&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-question-circle"></i>
                                 </div>
                             </div>
                         </div>
                         <div class="row" id="">
-                            <div class="col-md-2">
+                            <div class="col-md-3">
                                 <div>Objects selected for deployment</div>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-4">
                                 <div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dependencies</div>
                             </div>
                             <div class="col-md-5">
@@ -237,10 +237,10 @@
                             </div>
                         </div>
                         <div class="row" id="rowSQLDependencies">
-                            <div class="col-md-2">
+                            <div class="col-md-3">
                                 <div data-bind="data.objectsSelected"></div>
                             </div>
-                            <div class="col-md-5">
+                            <div class="col-md-4">
                                 <div id="SQLDependencies">
                                     @*load by js*@
                                 </div>
