--- a/Windows-MacOs/Windows-MacOs/Views/Viewer/Shared/_Layout.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Viewer/Shared/_Layout.cshtml
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     @Styles.Render("~/Content/css")
     @Styles.Render("~/css/viewer")
-    @Styles.Render("~/css/manager/sqlcompare")
     @*@Scripts.Render("~/bundles/modernizr")*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/messages")
