--- a/Windows-MacOs/Windows-MacOs/Views/Viewer/_Viewer.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/Viewer/_Viewer.cshtml
@@ -3,16 +3,18 @@
 }
 
 <div name="content" class="content col-flex">
-    <div class="wrapped border-1" style="flex-basis: 40px;">
-        <div class="row">
-            <a class="btn btn2 small" href="javascript:void(0)" id="btnSave"><i class="fa-solid fa-floppy-disk"></i></a>
+    <div class="wrapped border-1" id="toolbarContainer" style="flex: 0;">
+        <div class="flex title" style="height: 100%;">
+            <div class="dot-bar bg-fa-wand-magic-sparkles">
+            </div>
+            <a class="btn btn2 tiny bg-transparent toolbarButton" href="javascript:void(0)" id="btnSave"><i class="fa-solid fa-floppy-disk"></i></a>
         </div>
     </div>
     <div class="resizer-y" id="btnResizer"></div>
     <div class="wrapped border-2 scroll-y" style="flex: 1;">
         <div class="row">
             <div class="col-md-12" id="viewdata">
-                
+
             </div>
         </div>
     </div>
