--- a/Windows-MacOs/Windows-MacOs/Views/NoteBookElementary/_NoteBookElementary.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/NoteBookElementary/_NoteBookElementary.cshtml
@@ -22,18 +22,21 @@
             <div class="col-md-12" id="viewdata">
                 <div id="viewContent" style="background: #d1d1d1;display: initial;/* flex-wrap: wrap; */">
                     <div class="" style="margin: auto; position: relative;">
-                        <div class="a4LandScape" style="position: absolute; box-sizing: content-box; border: 1px solid #d3d3d3; background: transparent; top: 48px; z-index: 3; ">
+                        <div class="a4LandScape" style="position: absolute; box-sizing: content-box; border: 1px solid #d3d3d3; background: transparent; top: 48px; z-index: 3;">
                             <canvas id="myCanvas" width="1122" height="793" style="background: transparent;">
                                 YourbrowserdoesnotsupporttheHTML5canvastag.
                             </canvas>
                         </div>
-                        <div class="a4LandScape" style="position: absolute; box-sizing: content-box; border: 1px solid transparent; top: 48px; z-index: 2;">
+                        <div class="a4LandScape" style="position: absolute; box-sizing: content-box; border: 1px solid transparent; top: 48px; z-index: 2; opacity: .3;">
                             <div id="myContent" class="a4LandScape" style="background: white;">
                             </div>
                         </div>
                         <div class="a4LandScape" style="position: absolute;box-sizing: content-box; border: 1px solid transparent; top: 48px; z-index: 1; visibility: hidden;">
                             <svg id="mySVG" width="1122" height="793" version="1.1" xmlns="http://www.w3.org/2000/svg" style="background: white;">
                             </svg>
+                        </div>
+                        <div class="a4LandScape" style="position: absolute;box-sizing: content-box; border: none; top: 48px; z-index: 1;">
+                            <iframe id="iframeSVG" width="100%" height="100%"></iframe>
                         </div>
                     </div>
                 </div>
