--- a/Windows-MacOs/Windows-MacOs/Views/NoteBookElementary/_NoteBookElementary.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/NoteBookElementary/_NoteBookElementary.cshtml
@@ -36,7 +36,7 @@
                             </svg>
                         </div>
                         <div class="a4LandScape" style="position: absolute;box-sizing: content-box; border: none; top: 48px; z-index: 1;">
-                            <iframe id="iframeSVG" width="100%" height="100%"></iframe>
+                            <iframe id="iframeSVG" title="SVG" style="width: 100%; height: 100%;"></iframe>
                         </div>
                     </div>
                 </div>
