--- a/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
+++ b/Windows-MacOs/Windows-MacOs/Views/SQLCompare/_SQLCompare.cshtml
@@ -269,6 +269,7 @@
 <script>
     var getSQLScript = '@Url.Action("GetSQLScript", "manager/SQLCompare")'
     var getSQLDependencies = '@Url.Action("GetSQLDependencies", "manager/SQLCompare")'
+    var getSQLCreateObject = '@Url.Action("GetSQLCreateObject","manager/SQLCompare")'
 </script>
 <style>
 </style>
